feat: Enhance hero stats command with error handling and logging improvements